--- a/index.html
+++ b/index.html
@@ -10,22 +10,27 @@
     <div class="wrapper">
       <header>
         <nav>
+          <div class="logo">
+            <a href="#"
+              ><img
+                src="./assets/images/logo-2.png"
+                width="134"
+                height="22"
+                alt="Aladino logo"
+            /></a>
+          </div>
           <ul class="main-nav">
-            <li class="logo">
-              <a href="#"
-                ><img
-                  src="./assets/images/logo-2.png"
-                  width="134"
-                  height="22"
-                  alt="Aladino logo"
-              /></a>
-            </li>
             <li><a href="#">Link1</a></li>
             <li><a href="#">Link2</a></li>
             <li><a href="#">Link3</a></li>
             <li><a href="#">Link4</a></li>
             <li><a href="#">Link5</a></li>
           </ul>
+          <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </div>
         </nav>
       </header>
       <main>
@@ -47,5 +52,6 @@
         </div>
       </main>
     </div>
+    <script src="./assets/js/main.js"></script>
   </body>
 </html>
