--- a/index.html
+++ b/index.html
@@ -11,13 +11,9 @@
       <header>
         <nav>
           <div class="logo">
-            <a href="#"
-              ><img
-                src="./assets/images/logo-2.png"
-                width="134"
-                height="22"
-                alt="Aladino logo"
-            /></a>
+            <a href="#">
+              <img src="./assets/images/logo.png" width="134" height="22" alt="Aladino logo" />
+            </a>
           </div>
           <ul class="main-nav">
             <li><a href="#">Link1</a></li>
@@ -40,10 +36,7 @@
               <span class="sunhead">Signup Starts </span> <br />
               <span class="headline">September 15th</span>
             </h1>
-            <p>
-              Aladino, the 100 millions $ ,mlm exclusive club mine alts , save
-              in BTC
-            </p>
+            <p>Aladino, the 100 millions $ ,mlm exclusive club mine alts , save in BTC</p>
             <div class="ctas-wrapper">
               <a href="#" class="btn btn--aqua">Learn More</a>
               <a href="#" class="btn btn--outline btn--video">Video</a>
