--- a/index.html
+++ b/index.html
@@ -5,22 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aladino - Coming Soon...</title>
     <link rel="stylesheet" href="./assets/css/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
   </head>
   <body>
     <div class="wrapper">
-      <header>
+      <header class="container">
         <nav>
           <div class="logo">
             <a href="#">
-              <img src="./assets/images/logo.png" width="134" height="22" alt="Aladino logo" />
+              <img src="./assets/images/logo.svg" width="134" height="22" alt="Aladino logo" />
             </a>
           </div>
           <ul class="main-nav">
-            <li><a href="#">Link1</a></li>
-            <li><a href="#">Link2</a></li>
-            <li><a href="#">Link3</a></li>
-            <li><a href="#">Link4</a></li>
-            <li><a href="#">Link5</a></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">Exclusive Club</a></li>
+            <li><a href="#">Concept</a></li>
           </ul>
           <div class="hamburger">
             <span class="bar"></span>
@@ -31,19 +33,34 @@
       </header>
       <main>
         <div class="hero-wrapper">
-          <section class="hero">
-            <h1>
-              <span class="sunhead">Signup Starts </span> <br />
-              <span class="headline">September 15th</span>
-            </h1>
-            <p>Aladino, the 100 millions $ ,mlm exclusive club mine alts , save in BTC</p>
-            <div class="ctas-wrapper">
-              <a href="#" class="btn btn--aqua">Learn More</a>
-              <a href="#" class="btn btn--outline btn--video">Video</a>
+          <section class="hero container">
+            <div class="hero-content">
+              <h1>
+                <span class="sunhead">Check again on</span> <br />
+                <span class="headline">September 11th</span>
+              </h1>
+              <p>Aladino, the 100 millions $ ,mlm exclusive club mine alts , save in BTC</p>
+              <a href="#" class="btn">Learn More</a>
             </div>
           </section>
         </div>
       </main>
+      <footer class="container">
+        <ul class="footer-nav">
+          <li>
+            <a href="#">Documents</a>
+          </li>
+          <li>
+            <a href="#">Terms & Conditions</a>
+          </li>
+          <li>
+            <a href="#">Policies & Procedure</a>
+          </li>
+          <li>
+            <a href="#">Brand Guidelines</a>
+          </li>
+        </ul>
+      </footer>
     </div>
     <script src="./assets/js/main.js"></script>
   </body>
