--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
       <header class="container">
         <nav>
           <div class="logo">
-            <a href="#">
+            <a>
               <img src="./assets/images/logo.svg" width="134" height="22" alt="Aladino logo" />
             </a>
           </div>
           <ul class="main-nav">
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">Exclusive Club</a></li>
-            <li><a href="#">Concept</a></li>
+            <li><a>About us</a></li>
+            <li><a>Products</a></li>
+            <li><a>Exclusive Club</a></li>
+            <li><a>Concept</a></li>
           </ul>
           <div class="hamburger">
             <span class="bar"></span>
@@ -36,11 +36,11 @@
           <section class="hero container">
             <div class="hero-content">
               <h1>
-                <span class="sunhead">Check again on</span> <br />
-                <span class="headline">September 11th</span>
+                <span class="sunhead">Signup Starts</span> <br />
+                <span class="headline">September 15<sup>th</sup></span>
               </h1>
-              <p>Aladino, the 100 millions $ ,mlm exclusive club mine alts , save in BTC</p>
-              <a href="#" class="btn">Learn More</a>
+              <p>Aladino, the $100 Millions Private Club. Mine alts, save in BTC.</p>
+              <a class="btn">Check again on September 11th</a>
             </div>
           </section>
         </div>
@@ -48,16 +48,16 @@
       <footer class="container">
         <ul class="footer-nav">
           <li>
-            <a href="#">Documents</a>
+            <a>Documents</a>
           </li>
           <li>
-            <a href="#">Terms & Conditions</a>
+            <a>Terms & Conditions</a>
           </li>
           <li>
-            <a href="#">Policies & Procedure</a>
+            <a>Policies & Procedure</a>
           </li>
           <li>
-            <a href="#">Brand Guidelines</a>
+            <a>Brand Guidelines</a>
           </li>
         </ul>
       </footer>
