--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
                 <span class="sunhead">Signup Starts</span> <br />
                 <span class="headline">September 15<sup>th</sup></span>
               </h1>
-              <p>Aladino, the $100 Millions Private Club. Mine alts, save in BTC.</p>
-              <a class="btn">Check again on September 11th</a>
+              <p>
+                Aladino, the $100 Millions Private Club. <br />
+                Mine alts, save in BTC.
+              </p>
+              <a class="btn">Check again on September 15<sup>th</sup></a>
             </div>
           </section>
         </div>
