--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
   </head>
   <body>
-    <div class="wrapper">
-      <header class="container">
+    <header>
+      <div class="container">
         <nav>
           <div class="logo">
             <a>
@@ -30,41 +30,333 @@
             <span class="bar"></span>
           </div>
         </nav>
-      </header>
-      <main>
-        <div class="hero-wrapper">
-          <section class="hero container">
+      </div>
+    </header>
+    <main>
+      <section class="hero">
+        <div class="container">
+          <div class="hero-wrapper">
             <div class="hero-content">
               <h1>
                 <span class="sunhead">Signup Starts</span> <br />
                 <span class="headline">September 15<sup>th</sup></span>
               </h1>
-              <p>
+              <p class="tagline">
                 Aladino, the $100 Millions Private Club. <br />
                 Mine alts, save in BTC.
               </p>
               <a class="btn">Check again on September 15<sup>th</sup></a>
             </div>
-          </section>
+            <div class="hero-image">
+              <img src="./assets/images/islam.svg" alt="" />
+            </div>
+          </div>
         </div>
-      </main>
-      <footer class="container">
-        <ul class="footer-nav">
-          <li>
-            <a>Documents</a>
-          </li>
-          <li>
-            <a>Terms & Conditions</a>
-          </li>
-          <li>
-            <a>Policies & Procedure</a>
-          </li>
-          <li>
-            <a>Brand Guidelines</a>
-          </li>
-        </ul>
-      </footer>
-    </div>
+      </section>
+      <section class="team">
+        <div class="container">
+          <h2>About Us</h2>
+          <p class="subtitle team__subtitle">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
+          </p>
+          <div class="team-content">
+            <h3>Aladino Team</h3>
+            <div class="cards-wrapper">
+              <!-- == Member card == -->
+              <div class="member-card">
+                <div class="member-header">
+                  <div>
+                    <img class="member__avatar" src="./assets/images/Avatar.jpg" width="100" alt="" />
+                  </div>
+                  <div>
+                    <h4 class="member__name">Michele Domizi</h4>
+                    <div class="member__role">CEO</div>
+                  </div>
+                </div>
+                <p class="member__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                <div class="member__link">
+                  <a href="#"><img src="./assets/images/linkedin-logo.svg" width="103" alt="" /></a>
+                </div>
+              </div>
+              <!-- == Member card == -->
+              <div class="member-card">
+                <div class="member-header">
+                  <div>
+                    <img class="member__avatar" src="./assets/images/Avatar.jpg" width="100" alt="" />
+                  </div>
+                  <div>
+                    <h4 class="member__name">Michele Pelagagge</h4>
+                    <div class="member__role">COO</div>
+                  </div>
+                </div>
+                <p class="member__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                <div class="member__link">
+                  <a href="#"><img src="./assets/images/linkedin-logo.svg" width="103" alt="" /></a>
+                </div>
+              </div>
+              <!-- == Member card == -->
+              <div class="member-card">
+                <div class="member-header">
+                  <div>
+                    <img class="member__avatar" src="./assets/images/Avatar.jpg" width="100" alt="" />
+                  </div>
+                  <div>
+                    <h4 class="member__name">Paolo Musumeci</h4>
+                    <div class="member__role">CFO</div>
+                  </div>
+                </div>
+                <p class="member__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                <div class="member__link">
+                  <a href="#"><img src="./assets/images/linkedin-logo.svg" width="103" alt="" /></a>
+                </div>
+              </div>
+              <!-- == Member card == -->
+              <div class="member-card">
+                <div class="member-header">
+                  <div>
+                    <img class="member__avatar" src="./assets/images/Avatar.jpg" width="100" alt="" />
+                  </div>
+                  <div>
+                    <h4 class="member__name">MR. X</h4>
+                    <div class="member__role">CTO</div>
+                  </div>
+                </div>
+                <p class="member__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                <div class="member__link">
+                  <a href="#"><img src="./assets/images/linkedin-logo.svg" width="103" alt="" /></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="other-members">
+              <h3>Aladino secret weapons</h3>
+              <div class="cards-wrapper">
+                <!-- == Member card == -->
+                <div class="member-card">
+                  <div class="member-header">
+                    <div>
+                      <img class="member__avatar" src="./assets/images/Avatar.jpg" width="100" alt="" />
+                    </div>
+                    <div>
+                      <h4 class="member__name">Michele Domizi</h4>
+                      <div class="member__role">CEO</div>
+                    </div>
+                  </div>
+                  <p class="member__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                  <div class="member__link">
+                    <a href="#"><img src="./assets/images/linkedin-logo.svg" width="103" alt="" /></a>
+                  </div>
+                </div>
+                <!-- == Member card == -->
+                <div class="member-card">
+                  <div class="member-header">
+                    <div>
+                      <img class="member__avatar" src="./assets/images/Avatar.jpg" width="100" alt="" />
+                    </div>
+                    <div>
+                      <h4 class="member__name">Paolo Musumeci</h4>
+                      <div class="member__role">CFO</div>
+                    </div>
+                  </div>
+                  <p class="member__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                  <div class="member__link">
+                    <a href="#"><img src="./assets/images/linkedin-logo.svg" width="103" alt="" /></a>
+                  </div>
+                </div>
+                <!-- == Member card == -->
+                <div class="member-card">
+                  <div class="member-header">
+                    <div>
+                      <img class="member__avatar" src="./assets/images/Avatar.jpg" width="100" alt="" />
+                    </div>
+                    <div>
+                      <h4 class="member__name">Paolo Musumeci</h4>
+                      <div class="member__role">CFO</div>
+                    </div>
+                  </div>
+                  <p class="member__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                  <div class="member__link">
+                    <a href="#"><img src="./assets/images/linkedin-logo.svg" width="103" alt="" /></a>
+                  </div>
+                </div>
+                <!-- == Member card == -->
+                <div class="member-card">
+                  <div class="member-header">
+                    <div>
+                      <img class="member__avatar" src="./assets/images/Avatar.jpg" width="100" alt="" />
+                    </div>
+                    <div>
+                      <h4 class="member__name">Paolo Musumeci</h4>
+                      <div class="member__role">CFO</div>
+                    </div>
+                  </div>
+                  <p class="member__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                  <div class="member__link">
+                    <a href="#"><img src="./assets/images/linkedin-logo.svg" width="103" alt="" /></a>
+                  </div>
+                </div>
+                <!-- == Member card == -->
+                <div class="member-card">
+                  <div class="member-header">
+                    <div>
+                      <img class="member__avatar" src="./assets/images/Avatar.jpg" width="100" alt="" />
+                    </div>
+                    <div>
+                      <h4 class="member__name">Paolo Musumeci</h4>
+                      <div class="member__role">CFO</div>
+                    </div>
+                  </div>
+                  <p class="member__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                  <div class="member__link">
+                    <a href="#"><img src="./assets/images/linkedin-logo.svg" width="103" alt="" /></a>
+                  </div>
+                </div>
+                <!-- == Member card == -->
+                <div class="member-card">
+                  <div class="member-header">
+                    <div>
+                      <img class="member__avatar" src="./assets/images/Avatar.jpg" width="100" alt="" />
+                    </div>
+                    <div>
+                      <h4 class="member__name">Paolo Musumeci</h4>
+                      <div class="member__role">CFO</div>
+                    </div>
+                  </div>
+                  <p class="member__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                  <div class="member__link">
+                    <a href="#"><img src="./assets/images/linkedin-logo.svg" width="103" alt="" /></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="mining-market">
+        <div class="container">
+          <h2>Mining Market</h2>
+          <div class="cards-wrapper">
+            <div class="mining-card">
+              <img src="https://placehold.co/600x300" alt="" />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
+                viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+              </p>
+            </div>
+
+            <div class="mining-card">
+              <img src="https://placehold.co/600x300" alt="" />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
+                viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+              </p>
+            </div>
+
+            <div class="mining-card">
+              <img src="https://placehold.co/600x300" alt="" />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
+                viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+              </p>
+            </div>
+
+            <div class="mining-card">
+              <img src="https://placehold.co/600x300" alt="" />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
+                viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="mining-market mining-market--light">
+        <div class="container">
+          <h2>Mining Market</h2>
+          <div class="cards-wrapper">
+            <div class="mining-card">
+              <img src="https://placehold.co/600x300" alt="" />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
+                viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+              </p>
+            </div>
+
+            <div class="mining-card">
+              <img src="https://placehold.co/600x300" alt="" />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
+                viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+              </p>
+            </div>
+
+            <div class="mining-card">
+              <img src="https://placehold.co/600x300" alt="" />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
+                viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+              </p>
+            </div>
+
+            <div class="mining-card">
+              <img src="https://placehold.co/600x300" alt="" />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
+                viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="business-model">
+        <div class="container">
+          <h2 class="business-model__heading">Aladino’s Business Model</h2>
+          <p class="subtitle">The first “automatic auotoshipping” in the industry</p>
+          <div class="business-model-content">
+            <img class="business-model__image" src="./assets/images/model.svg" width="600" alt="" />
+          </div>
+        </div>
+      </section>
+      <section class="whyus">
+        <div class="container">
+          <h2 class="whuus__title">Why Aladino</h2>
+          <div class="whyus-content">
+            <div>
+              <h3 class="whyus__heading whyus__heading--right">Why Not Hold your Money in a Bank</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
+                viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
+                viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+              </p>
+              <p>ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+            </div>
+            <div class="versus">VS.</div>
+            <div>
+              <h3 class="whyus__heading">Buy a Miners and Make Money</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
+                viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
+                viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+              </p>
+              <p>ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan lacus vel facilisis</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="steps">
+        <div class="container">
+          <h2>How to Start</h2>
+        </div>
+      </section>
+    </main>
+    <footer style="height: 100vh"></footer>
+
     <script src="./assets/js/main.js"></script>
   </body>
 </html>
