--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           </div>
         </div>
           <h3>Our Strategy</h3>
-          <p class="subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+          <!-- <p class="subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p> -->
 
           <!-- Strategy Cards wrapper -->
           <div class="strategy-cards">
@@ -285,6 +285,95 @@
         <div class="container">
           <p class="tagline">THE ALADINO</p>
           <h2>PROTOCOL</h2>
+          <div class="proto-cards">
+            <div class="proto-card">
+              <img src="./assets/images/NFT-logo.svg" alt="">
+              <h4 class="proto-card__title">Purchase</h4>
+              <p class="proto-card__text">Customers buy our NFT and hold onto it. The funds from these purchases fuel our mining setup, following a strategic device acquisition plan that syncs with BTC price trends.</p>
+            </div>
+            <div class="proto-card">
+              <img src="./assets/images/Earn-icon.svg" alt="">
+              <h4 class="proto-card__title">Earn</h4>
+              <p class="proto-card__text">Customers and distributors reap BTC rewards from mining and trading altcoins for BTC. The longer the hold, the higher the return..</p>
+            </div>
+            <div class="proto-card">
+              <img src="./assets/images/generate-icon.svg" alt="">
+              <h4 class="proto-card__title">Generate</h4>
+              <p class="proto-card__text">We generate an assorted mix of  cryptocurrencies for diversification. These coins pass through our Aladino protocol where we apply a practical swapping strategy and integrate with DeFi practices.</p>
+            </div>
+            <div class="proto-card">
+              <img class="proto-card__image" src="./assets/images/exit-icon.svg" alt="">
+              <h4 class="proto-card__title">Exit</h4>
+              <p class="proto-card__text">If someone decides to leave, no worries. They can sell the NFT anytime to anyone. Position in the network remains intact.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="business-model">
+        <div class="container">
+          <p class="tagline"></p>
+          <h2 class="business-model__heading">Aladino’s Business Model</h2>
+          <p class="subtitle">The first “automatic auotoshipping” in the industry</p>
+          <div class="business-model-content">
+            <img class="business-model__image" src="./assets/images/model.svg" width="600" alt="" />
+          </div>
+        </div>
+      </section>
+      <section class="whyus">
+        <div class="container">
+          <h2 class="whuus__title">Why Aladino</h2>
+          <div class="whyus-content">
+            <div>
+              <h3 class="whyus__heading whyus__heading--right">Why Not Hold your Money in a Bank</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+              <p>ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+            </div>
+            <div class="versus">VS.</div>
+            <div>
+              <h3 class="whyus__heading">Buy a Miners and Make Money</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+              <p>ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan lacus vel facilisis</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="steps">
+        <div class="container">
+          <h2>How to Start</h2>
+          <div class="steps-content">
+            <div class="step">
+              <img src="./assets/images/sign-up-icon.svg" width="100" alt="" />
+              <p>Sign Up</p>
+            </div>
+            <img class="step__arrow" src="./assets/images/arrow-next.svg" width="100" height="100" alt="" />
+            <div class="step">
+              <img src="./assets/images/purchase-nft-icon.svg" width="100" alt="" />
+              <p>
+                Purchase an <br />
+                NFT
+              </p>
+            </div>
+            <img class="step__arrow" src="./assets/images/arrow-next.svg" width="100" height="100" alt="" />
+            <div class="step">
+              <img src="./assets/images/get-mrb-in-btc-icon.svg" width="100" alt="" />
+              <p>
+                Get MRB <br />
+                in BTC
+              </p>
+            </div>
+            <img class="step__arrow" src="./assets/images/arrow-next.svg" width="100" height="100" alt="" />
+            <div class="step">
+              <img src="./assets/images/boost-business-icon.svg" width="100" alt="" />
+              <p>
+                Build your Business <br />
+                by Promoting <br />
+                Aladino
+              </p>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -359,178 +448,9 @@
               </div>
             </div>
           </div>
-
-          <div class="other-members">
-            <h3>Aladino secret weapons</h3>
-            <div class="cards-wrapper">
-              <!-- == Member card == -->
-              <div class="member-card">
-                <div class="member-header">
-                  <div>
-                    <img class="member__avatar" src="./assets/images/Avatar.jpg" width="100" alt="" />
-                  </div>
-                  <div>
-                    <h4 class="member__name">Michele Domizi</h4>
-                    <div class="member__role">CEO</div>
-                  </div>
-                </div>
-                <p class="member__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-                <div class="member__link">
-                  <a href="#"><img src="./assets/images/linkedin-logo.svg" width="103" alt="" /></a>
-                </div>
-              </div>
-              <!-- == Member card == -->
-              <div class="member-card">
-                <div class="member-header">
-                  <div>
-                    <img class="member__avatar" src="./assets/images/Avatar.jpg" width="100" alt="" />
-                  </div>
-                  <div>
-                    <h4 class="member__name">Paolo Musumeci</h4>
-                    <div class="member__role">CFO</div>
-                  </div>
-                </div>
-                <p class="member__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-                <div class="member__link">
-                  <a href="#"><img src="./assets/images/linkedin-logo.svg" width="103" alt="" /></a>
-                </div>
-              </div>
-              <!-- == Member card == -->
-              <div class="member-card">
-                <div class="member-header">
-                  <div>
-                    <img class="member__avatar" src="./assets/images/Avatar.jpg" width="100" alt="" />
-                  </div>
-                  <div>
-                    <h4 class="member__name">Paolo Musumeci</h4>
-                    <div class="member__role">CFO</div>
-                  </div>
-                </div>
-                <p class="member__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-                <div class="member__link">
-                  <a href="#"><img src="./assets/images/linkedin-logo.svg" width="103" alt="" /></a>
-                </div>
-              </div>
-              <!-- == Member card == -->
-              <div class="member-card">
-                <div class="member-header">
-                  <div>
-                    <img class="member__avatar" src="./assets/images/Avatar.jpg" width="100" alt="" />
-                  </div>
-                  <div>
-                    <h4 class="member__name">Paolo Musumeci</h4>
-                    <div class="member__role">CFO</div>
-                  </div>
-                </div>
-                <p class="member__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-                <div class="member__link">
-                  <a href="#"><img src="./assets/images/linkedin-logo.svg" width="103" alt="" /></a>
-                </div>
-              </div>
-              <!-- == Member card == -->
-              <div class="member-card">
-                <div class="member-header">
-                  <div>
-                    <img class="member__avatar" src="./assets/images/Avatar.jpg" width="100" alt="" />
-                  </div>
-                  <div>
-                    <h4 class="member__name">Paolo Musumeci</h4>
-                    <div class="member__role">CFO</div>
-                  </div>
-                </div>
-                <p class="member__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-                <div class="member__link">
-                  <a href="#"><img src="./assets/images/linkedin-logo.svg" width="103" alt="" /></a>
-                </div>
-              </div>
-              <!-- == Member card == -->
-              <div class="member-card">
-                <div class="member-header">
-                  <div>
-                    <img class="member__avatar" src="./assets/images/Avatar.jpg" width="100" alt="" />
-                  </div>
-                  <div>
-                    <h4 class="member__name">Paolo Musumeci</h4>
-                    <div class="member__role">CFO</div>
-                  </div>
-                </div>
-                <p class="member__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-                <div class="member__link">
-                  <a href="#"><img src="./assets/images/linkedin-logo.svg" width="103" alt="" /></a>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
       </section>
 
-
-
-      <section class="business-model">
-        <div class="container">
-          <h2 class="business-model__heading">Aladino’s Business Model</h2>
-          <p class="subtitle">The first “automatic auotoshipping” in the industry</p>
-          <div class="business-model-content">
-            <img class="business-model__image" src="./assets/images/model.svg" width="600" alt="" />
-          </div>
-        </div>
-      </section>
-      <section class="whyus">
-        <div class="container">
-          <h2 class="whuus__title">Why Aladino</h2>
-          <div class="whyus-content">
-            <div>
-              <h3 class="whyus__heading whyus__heading--right">Why Not Hold your Money in a Bank</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
-              <p>ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
-            </div>
-            <div class="versus">VS.</div>
-            <div>
-              <h3 class="whyus__heading">Buy a Miners and Make Money</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
-              <p>ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan lacus vel facilisis</p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="steps">
-        <div class="container">
-          <h2>How to Start</h2>
-          <div class="steps-content">
-            <div class="step">
-              <img src="./assets/images/sign-up-icon.svg" width="100" alt="" />
-              <p>Sign Up</p>
-            </div>
-            <img class="step__arrow" src="./assets/images/arrow-next.svg" width="100" height="100" alt="" />
-            <div class="step">
-              <img src="./assets/images/purchase-nft-icon.svg" width="100" alt="" />
-              <p>
-                Purchase an <br />
-                NFT
-              </p>
-            </div>
-            <img class="step__arrow" src="./assets/images/arrow-next.svg" width="100" height="100" alt="" />
-            <div class="step">
-              <img src="./assets/images/get-mrb-in-btc-icon.svg" width="100" alt="" />
-              <p>
-                Get MRB <br />
-                in BTC
-              </p>
-            </div>
-            <img class="step__arrow" src="./assets/images/arrow-next.svg" width="100" height="100" alt="" />
-            <div class="step">
-              <img src="./assets/images/boost-business-icon.svg" width="100" alt="" />
-              <p>
-                Build your Business <br />
-                by Promoting <br />
-                Aladino
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
     </main>
     <footer class="footer">
       <div class="container">
